--- a/app/src/main/res/layout/recycler_device_item.xml
+++ b/app/src/main/res/layout/recycler_device_item.xml
@@ -8,44 +8,43 @@
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginBottom="2dp"
-        app:cardElevation="2dp">
+        android:layout_marginBottom="4dp"
+        app:cardBackgroundColor="@color/blue_grey_200"
+        app:cardElevation="3dp">
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="horizontal">
             <ImageView
+                android:id="@+id/ivImage"
                 android:layout_gravity="center_vertical"
                 android:layout_marginStart="10dp"
                 android:layout_width="60dp"
                 android:layout_height="60dp"
-                tools:src="@drawable/ic_launcher_background"/>
+                android:src="@drawable/ic_launcher_background"/>
             <LinearLayout
                 android:layout_margin="10dp"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:orientation="vertical">
                 <TextView
+                    android:id="@+id/tvDeviceName"
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
                     android:layout_weight="1"
                     android:gravity="center_vertical"
                     android:textSize="18sp"
+                    android:textColor="@color/white"
                     android:text="Android"/>
                 <TextView
+                    android:id="@+id/tvDeviceIp"
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
                     android:layout_weight="1"
-                    android:gravity="center_vertical"
+                    android:gravity="start|bottom"
                     android:textSize="12sp"
+                    android:textColor="@color/white"
                     android:text="192.168.0.1"/>
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="0dp"
-                    android:layout_weight="1"
-                    android:gravity="center_vertical"
-                    android:textSize="10sp"
-                    android:text="00:00:24:89:09"/>
             </LinearLayout>
         </LinearLayout>
     </android.support.v7.widget.CardView>
