--- a/app/src/main/res/layout/recycler_device_item.xml
+++ b/app/src/main/res/layout/recycler_device_item.xml
@@ -6,6 +6,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="horizontal">
     <android.support.v7.widget.CardView
+        android:id="@+id/cvItem"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginBottom="4dp"
