--- a/app/src/main/res/layout/recycler_file_manager_item.xml
+++ b/app/src/main/res/layout/recycler_file_manager_item.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="60dp"
+    android:layout_height="wrap_content"
+    android:minHeight="60dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="horizontal">
     <android.support.v7.widget.CardView
@@ -24,9 +25,10 @@
             <TextView
                 android:id="@+id/tvName"
                 android:layout_margin="10dp"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
                 android:layout_weight="1"
+                android:layout_gravity="center_vertical"
                 android:gravity="center_vertical"
                 android:textSize="18sp"
                 android:textColor="@color/white"
