--- a/app/src/main/res/layout/recycler_directory_item.xml
+++ b/app/src/main/res/layout/recycler_directory_item.xml
@@ -7,7 +7,8 @@
         android:id="@+id/cvItem"
         android:layout_margin="5dp"
         android:layout_width="wrap_content"
-        android:layout_height="40dp">
+        android:layout_height="40dp"
+        android:minWidth="40dp">
         <TextView
             android:id="@+id/tvText"
             android:gravity="center"
