--- a/app/src/main/res/layout/fragment_file_manager.xml
+++ b/app/src/main/res/layout/fragment_file_manager.xml
@@ -3,6 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:background="@color/blue_grey_400"
     xmlns:tools="http://schemas.android.com/tools">
 
     <android.support.v7.widget.RecyclerView
@@ -18,4 +19,11 @@
         android:layout_height="match_parent"
         tools:listitem="@layout/recycler_file_manager_item">
     </android.support.v7.widget.RecyclerView>
+    <TextView
+        android:id="@+id/tvEmptyFolder"
+        android:layout_width="match_parent"
+        android:gravity="center"
+        android:textColor="@color/white"
+        android:layout_height="match_parent"
+        android:text="Empty folder"/>
 </LinearLayout>
