--- a/app/src/main/res/layout/fragment_network.xml
+++ b/app/src/main/res/layout/fragment_network.xml
@@ -3,6 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
+    android:background="@color/blue_grey_400"
     android:orientation="vertical">
     <Button
         android:id="@+id/btnScannNetworkDevices"
