--- a/app/src/main/res/layout/recycler_directory_item.xml
+++ b/app/src/main/res/layout/recycler_directory_item.xml
@@ -1,13 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
     <android.support.v7.widget.CardView
         android:id="@+id/cvItem"
-        android:layout_margin="5dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginStart="5dp"
+        android:layout_marginBottom="5dp"
         android:layout_width="wrap_content"
         android:layout_height="40dp"
+        app:cardBackgroundColor="@color/blue_grey_500"
         android:minWidth="40dp">
         <TextView
             android:id="@+id/tvText"
@@ -15,6 +18,13 @@
             android:layout_margin="5dp"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:text="sdfdsfsdf"/>
+            android:textColor="@color/white"
+            android:text=""/>
+        <ImageView
+            android:id="@+id/ivImage"
+            android:gravity="center"
+            android:layout_gravity="center"
+            android:layout_width="30dp"
+            android:layout_height="30dp" />
     </android.support.v7.widget.CardView>
 </LinearLayout>
