--- a/app/src/main/res/layout/recycler_file_manager_item.xml
+++ b/app/src/main/res/layout/recycler_file_manager_item.xml
@@ -33,6 +33,13 @@
                 android:textSize="18sp"
                 android:textColor="@color/white"
                 android:text="Android"/>
+            <ImageView
+                android:id="@+id/ivMore"
+                android:layout_gravity="center_vertical"
+                android:src="@drawable/ic_more_dots"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_marginEnd="10dp"/>
         </LinearLayout>
     </android.support.v7.widget.CardView>
 </LinearLayout>
