--- a/app/src/main/res/layout/dialog_info_fragment.xml
+++ b/app/src/main/res/layout/dialog_info_fragment.xml
@@ -1,7 +1,84 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical">
+    <android.support.v7.widget.CardView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:cardElevation="3dp">
+        <android.support.v7.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="4dp"
+            app:cardBackgroundColor="@color/blue_grey_200"
+            app:cardElevation="3dp">
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical">
+                <TextView
+                    android:id="@+id/tvTitle"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/white"
+                    android:gravity="center_horizontal"
+                    android:textSize="18sp"
+                    android:text="@string/file_info"/>
+                <TextView
+                    android:id="@+id/tvInfoSize"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/white"
+                    android:gravity="start"
+                    android:textSize="14sp"
+                    android:text="@string/name"/>
+                <TextView
+                    android:id="@+id/tvInfoDirectory"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/white"
+                    android:gravity="start"
+                    android:textSize="14sp"
+                    android:text="@string/directory"/>
+                <TextView
+                    android:id="@+id/tvInfoDate"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/white"
+                    android:gravity="start"
+                    android:textSize="14sp"
+                    android:text="@string/directory"/>
+            </LinearLayout>
 
+        </android.support.v7.widget.CardView>
+        <TextView
+            android:id="@+id/tvRename"
+            android:layout_marginTop="5dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textColor="@color/blue_grey_500"
+            android:gravity="center_horizontal"
+            android:textSize="16sp"
+            android:text="@string/rename"/>
+        <TextView
+            android:id="@+id/tvDelete"
+            android:layout_marginTop="5dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textColor="@color/blue_grey_500"
+            android:gravity="center_horizontal"
+            android:textSize="16sp"
+            android:text="@string/delete"/>
+        <TextView
+            android:id="@+id/tvAddToFavorite"
+            android:layout_marginTop="5dp"
+            android:layout_width="match_parent"
+            android:layout_height="30dp"
+            android:textColor="@color/blue_grey_500"
+            android:gravity="center_horizontal"
+            android:textSize="16sp"
+            android:text="@string/add_to_favorite"/>
+    </android.support.v7.widget.CardView>
 </LinearLayout>
