--- a/app/src/main/res/layout/dialog_info_fragment.xml
+++ b/app/src/main/res/layout/dialog_info_fragment.xml
@@ -5,80 +5,119 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical">
     <android.support.v7.widget.CardView
-        android:layout_width="wrap_content"
+        android:layout_width="300dp"
         android:layout_height="wrap_content"
         app:cardElevation="3dp">
-        <android.support.v7.widget.CardView
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="4dp"
-            app:cardBackgroundColor="@color/blue_grey_200"
-            app:cardElevation="3dp">
-            <LinearLayout
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+            <android.support.v7.widget.CardView
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="vertical">
-                <TextView
-                    android:id="@+id/tvTitle"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="4dp"
+                app:cardBackgroundColor="@color/blue_grey_200"
+                app:cardElevation="3dp">
+                <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:textColor="@color/white"
-                    android:gravity="center_horizontal"
-                    android:textSize="18sp"
-                    android:text="@string/file_info"/>
-                <TextView
-                    android:id="@+id/tvInfoSize"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:textColor="@color/white"
-                    android:gravity="start"
-                    android:textSize="14sp"
-                    android:text="@string/name"/>
-                <TextView
-                    android:id="@+id/tvInfoDirectory"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:textColor="@color/white"
-                    android:gravity="start"
-                    android:textSize="14sp"
-                    android:text="@string/directory"/>
-                <TextView
-                    android:id="@+id/tvInfoDate"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:textColor="@color/white"
-                    android:gravity="start"
-                    android:textSize="14sp"
-                    android:text="@string/directory"/>
-            </LinearLayout>
+                    android:layout_height="match_parent"
+                    android:layout_margin="5dp"
+                    android:orientation="vertical">
+                    <TextView
+                        android:id="@+id/tvTitle"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:gravity="center_horizontal"
+                        android:text="@string/file_info"
+                        android:textColor="@color/white"
+                        android:textSize="18sp" />
 
-        </android.support.v7.widget.CardView>
-        <TextView
-            android:id="@+id/tvRename"
-            android:layout_marginTop="5dp"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textColor="@color/blue_grey_500"
-            android:gravity="center_horizontal"
-            android:textSize="16sp"
-            android:text="@string/rename"/>
-        <TextView
-            android:id="@+id/tvDelete"
-            android:layout_marginTop="5dp"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textColor="@color/blue_grey_500"
-            android:gravity="center_horizontal"
-            android:textSize="16sp"
-            android:text="@string/delete"/>
-        <TextView
-            android:id="@+id/tvAddToFavorite"
-            android:layout_marginTop="5dp"
-            android:layout_width="match_parent"
-            android:layout_height="30dp"
-            android:textColor="@color/blue_grey_500"
-            android:gravity="center_horizontal"
-            android:textSize="16sp"
-            android:text="@string/add_to_favorite"/>
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal">
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:gravity="start"
+                            android:text="@string/name"
+                            android:textColor="@color/white"
+                            android:textSize="14sp" />
+                        <TextView
+                            android:id="@+id/tvName"
+                            android:layout_marginStart="5dp"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:textColor="@color/white"
+                            android:textSize="14sp"/>
+                    </LinearLayout>
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal">
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:gravity="start"
+                            android:text="@string/directory"
+                            android:textColor="@color/white"
+                            android:textSize="14sp" />
+                        <TextView
+                            android:id="@+id/tvDirectory"
+                            android:layout_marginStart="5dp"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:textColor="@color/white"
+                            android:textSize="14sp"/>
+                    </LinearLayout>
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal">
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:gravity="start"
+                            android:text="@string/creation_date"
+                            android:textColor="@color/white"
+                            android:textSize="14sp" />
+                        <TextView
+                            android:id="@+id/tvDate"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:textColor="@color/white"
+                            android:textSize="14sp" />
+                    </LinearLayout>
+
+                </LinearLayout>
+            </android.support.v7.widget.CardView>
+            <TextView
+                android:id="@+id/tvRename"
+                android:layout_margin="5dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textColor="@color/blue_grey_500"
+                android:gravity="center_horizontal"
+                android:textSize="18sp"
+                android:text="@string/rename"/>
+            <TextView
+                android:id="@+id/tvDelete"
+                android:layout_margin="5dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textColor="@color/blue_grey_500"
+                android:gravity="center_horizontal"
+                android:textSize="18sp"
+                android:text="@string/delete"/>
+            <TextView
+                android:id="@+id/tvAddToFavorite"
+                android:layout_margin="5dp"
+                android:layout_width="match_parent"
+                android:layout_height="30dp"
+                android:textColor="@color/blue_grey_500"
+                android:gravity="center_horizontal"
+                android:textSize="18sp"
+                android:text="@string/add_to_favorite"/>
+        </LinearLayout>
     </android.support.v7.widget.CardView>
 </LinearLayout>
