--- a/app/src/main/res/layout/dialog_info_fragment.xml
+++ b/app/src/main/res/layout/dialog_info_fragment.xml
@@ -99,7 +99,39 @@
                 android:textColor="@color/blue_grey_500"
                 android:gravity="center_horizontal"
                 android:textSize="18sp"
+                android:textStyle="bold"
                 android:text="@string/rename"/>
+            <LinearLayout
+                android:id="@+id/llRename"
+                android:visibility="gone"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@color/blue_grey_200"
+                android:orientation="vertical">
+                <EditText
+                    android:id="@+id/etRename"
+                    android:layout_marginStart="5dp"
+                    android:layout_marginEnd="5dp"
+                    android:gravity="center_horizontal"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textColorLink="@color/white"
+                    android:textCursorDrawable="@color/white"
+                    android:backgroundTint="@color/white"
+                    android:textColor="@color/white"/>
+                <Button
+                    android:id="@+id/btnRenameFile"
+                    android:layout_width="wrap_content"
+                    android:layout_height="30dp"
+                    android:layout_gravity="center_horizontal"
+                    android:background="@drawable/button_onclick"
+                    android:textColor="@color/white"
+                    android:textSize="12sp"
+                    android:paddingStart="5dp"
+                    android:paddingEnd="5dp"
+                    android:text="@string/rename_file"
+                    android:layout_margin="7dp"/>
+            </LinearLayout>
             <TextView
                 android:id="@+id/tvDelete"
                 android:layout_margin="5dp"
@@ -108,16 +140,61 @@
                 android:textColor="@color/blue_grey_500"
                 android:gravity="center_horizontal"
                 android:textSize="18sp"
+                android:textStyle="bold"
                 android:text="@string/delete"/>
-            <TextView
-                android:id="@+id/tvAddToFavorite"
-                android:layout_margin="5dp"
+            <LinearLayout
+                android:id="@+id/llDelete"
+                android:visibility="gone"
                 android:layout_width="match_parent"
-                android:layout_height="30dp"
-                android:textColor="@color/blue_grey_500"
-                android:gravity="center_horizontal"
-                android:textSize="18sp"
-                android:text="@string/add_to_favorite"/>
+                android:layout_height="wrap_content"
+                android:background="@color/blue_grey_200"
+                android:orientation="vertical">
+                <TextView
+                    android:textColor="@color/white"
+                    android:textSize="16sp"
+                    android:layout_margin="5dp"
+                    android:gravity="center_horizontal"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/sure_delete"/>
+                <Button
+                    android:id="@+id/btnDeleteFile"
+                    android:layout_width="wrap_content"
+                    android:layout_height="30dp"
+                    android:layout_gravity="center_horizontal"
+                    android:background="@drawable/button_onclick"
+                    android:textColor="@color/white"
+                    android:textSize="12sp"
+                    android:paddingStart="5dp"
+                    android:paddingEnd="5dp"
+                    android:text="@string/delete_file"
+                    android:layout_margin="7dp"/>
+            </LinearLayout>
+            <LinearLayout
+                android:id="@+id/llFavorite"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:layout_gravity="center_horizontal"
+                android:layout_margin="5dp"
+                android:gravity="center_vertical">
+                <TextView
+                    android:id="@+id/tvAddToFavorite"
+                    android:layout_width="wrap_content"
+                    android:layout_height="30dp"
+                    android:textColor="@color/blue_grey_500"
+                    android:gravity="center"
+                    android:textSize="18sp"
+                    android:textStyle="bold"
+                    android:text="@string/add_to_favorite"/>
+                <ImageView
+                    android:id="@+id/ivFavorite"
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
+                    android:layout_gravity="center_vertical"
+                    android:src="@android:drawable/star_off"/>
+            </LinearLayout>
+
         </LinearLayout>
     </android.support.v7.widget.CardView>
 </LinearLayout>
