--- a/app/src/main/res/layout/dialog_info_fragment.xml
+++ b/app/src/main/res/layout/dialog_info_fragment.xml
@@ -121,36 +121,42 @@
                 android:textSize="18sp"
                 android:textStyle="bold"
                 android:text="@string/rename"/>
+
             <LinearLayout
                 android:id="@+id/llRename"
-                android:visibility="gone"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@color/blue_grey_200"
-                android:orientation="vertical">
+                android:orientation="vertical"
+                android:visibility="visible">
+
                 <EditText
                     android:id="@+id/etRename"
-                    android:layout_marginStart="5dp"
-                    android:layout_marginEnd="5dp"
-                    android:gravity="center_horizontal"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:textColorLink="@color/white"
-                    android:textCursorDrawable="@color/white"
+                    android:layout_marginEnd="5dp"
+                    android:layout_marginStart="5dp"
+                    android:layout_marginBottom="7dp"
+                    android:layout_marginTop="7dp"
                     android:backgroundTint="@color/white"
-                    android:textColor="@color/white"/>
+                    android:gravity="center_horizontal"
+                    android:textColor="@color/white"
+                    android:textColorLink="@color/white"
+                    android:textColorHint="@color/white"
+                    android:textColorHighlight="@color/white"
+                    android:textCursorDrawable="@color/white" />
                 <Button
                     android:id="@+id/btnRenameFile"
                     android:layout_width="wrap_content"
                     android:layout_height="30dp"
                     android:layout_gravity="center_horizontal"
+                    android:layout_marginBottom="7dp"
                     android:background="@drawable/button_onclick"
-                    android:textColor="@color/white"
-                    android:textSize="12sp"
-                    android:paddingStart="5dp"
                     android:paddingEnd="5dp"
+                    android:paddingStart="5dp"
                     android:text="@string/rename_file"
-                    android:layout_margin="7dp"/>
+                    android:textColor="@color/white"
+                    android:textSize="12sp" />
             </LinearLayout>
             <TextView
                 android:id="@+id/tvDelete"
@@ -162,33 +168,37 @@
                 android:textSize="18sp"
                 android:textStyle="bold"
                 android:text="@string/delete"/>
+
             <LinearLayout
                 android:id="@+id/llDelete"
-                android:visibility="gone"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@color/blue_grey_200"
-                android:orientation="vertical">
+                android:orientation="vertical"
+                android:visibility="gone">
+
                 <TextView
-                    android:textColor="@color/white"
-                    android:textSize="16sp"
-                    android:layout_margin="5dp"
-                    android:gravity="center_horizontal"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="@string/sure_delete"/>
+                    android:layout_marginBottom="7dp"
+                    android:layout_marginTop="7dp"
+                    android:gravity="center_horizontal"
+                    android:text="@string/sure_delete"
+                    android:textColor="@color/white"
+                    android:textSize="16sp" />
+
                 <Button
                     android:id="@+id/btnDeleteFile"
                     android:layout_width="wrap_content"
                     android:layout_height="30dp"
                     android:layout_gravity="center_horizontal"
+                    android:layout_marginBottom="7dp"
                     android:background="@drawable/button_onclick"
-                    android:textColor="@color/white"
-                    android:textSize="12sp"
-                    android:paddingStart="5dp"
                     android:paddingEnd="5dp"
+                    android:paddingStart="5dp"
                     android:text="@string/delete_file"
-                    android:layout_margin="7dp"/>
+                    android:textColor="@color/white"
+                    android:textSize="12sp" />
             </LinearLayout>
             <LinearLayout
                 android:id="@+id/llFavorite"
@@ -209,8 +219,9 @@
                     android:text="@string/add_to_favorite"/>
                 <ImageView
                     android:id="@+id/ivFavorite"
-                    android:layout_width="30dp"
-                    android:layout_height="30dp"
+                    android:layout_width="25dp"
+                    android:layout_height="25dp"
+                    android:layout_marginStart="3dp"
                     android:layout_gravity="center_vertical"
                     android:src="@drawable/ic_star"/>
             </LinearLayout>
