--- a/app/src/main/res/layout/recycler_directory_item.xml
+++ b/app/src/main/res/layout/recycler_directory_item.xml
@@ -25,6 +25,7 @@
             android:gravity="center"
             android:layout_gravity="center"
             android:layout_width="30dp"
+            android:tint="@color/white"
             android:layout_height="30dp" />
     </android.support.v7.widget.CardView>
 </LinearLayout>
