--- a/app/src/main/res/layout/dialog_info_fragment.xml
+++ b/app/src/main/res/layout/dialog_info_fragment.xml
@@ -128,7 +128,7 @@
                 android:layout_height="wrap_content"
                 android:background="@color/blue_grey_200"
                 android:orientation="vertical"
-                android:visibility="visible">
+                android:visibility="gone">
 
                 <EditText
                     android:id="@+id/etRename"
