--- a/app/src/main/res/layout/toolbar_layout.xml
+++ b/app/src/main/res/layout/toolbar_layout.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
+    android:layout_height="40dp"
     android:orientation="horizontal" >
         <Switch
             android:id="@+id/switchServerToolbar"
@@ -9,7 +9,7 @@
             android:layout_marginEnd="10dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:gravity="center_vertical"
+            android:layout_centerVertical="true"
             android:switchPadding="10dp"
-            android:text="Visible" />
+            android:text="@string/visibility" />
 </RelativeLayout>
