--- a/app/src/main/res/menu/activity_main2_drawer.xml
+++ b/app/src/main/res/menu/activity_main2_drawer.xml
@@ -6,17 +6,16 @@
     <group android:checkableBehavior="single">
         <item
             android:id="@+id/menu_network_manager"
-            android:icon="@drawable/ic_menu_camera"
-            android:iconTint="@color/white"
+            android:icon="@drawable/ic_phone_network"
             android:title="@string/network_manager" />
         <item
             android:id="@+id/menu_file_manager"
-            android:icon="@drawable/ic_menu_gallery"
+            android:icon="@drawable/ic_full_folder"
             android:title="@string/file_manager" />
         <item
-            android:id="@+id/nav_slideshow"
-            android:icon="@drawable/ic_menu_slideshow"
-            android:title="Slideshow" />
+            android:id="@+id/menu_favorite"
+            android:icon="@drawable/ic_star"
+            android:title="@string/favorite_files" />
         <item
             android:id="@+id/nav_manage"
             android:icon="@drawable/ic_menu_manage"
