service server notification, send selected files to service

--- a/app/src/main/res/layout/toolbar_layout.xml
+++ b/app/src/main/res/layout/toolbar_layout.xml
@@ -13,5 +13,6 @@
             android:layout_centerVertical="true"
             android:gravity="center"
             android:switchPadding="2dp"
+            android:theme="@style/ServerSwitch"
             android:text="@string/visibility" />
 </RelativeLayout>
