--- a/app/src/main/res/layout/dialog_info_fragment.xml
+++ b/app/src/main/res/layout/dialog_info_fragment.xml
@@ -135,17 +135,15 @@
                     android:id="@+id/etRename"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginEnd="5dp"
-                    android:layout_marginStart="5dp"
+                    android:layout_marginEnd="25dp"
+                    android:layout_marginStart="25dp"
                     android:layout_marginBottom="7dp"
                     android:layout_marginTop="7dp"
                     android:backgroundTint="@color/white"
                     android:gravity="center_horizontal"
-                    android:textColor="@color/white"
-                    android:textColorLink="@color/white"
-                    android:textColorHint="@color/white"
-                    android:textColorHighlight="@color/white"
-                    android:textCursorDrawable="@color/white" />
+                    android:maxLines="1"
+                    android:textCursorDrawable="@null"
+                    android:textColor="@color/white" />
                 <Button
                     android:id="@+id/btnRenameFile"
                     android:layout_width="wrap_content"
