--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -14,25 +14,20 @@
         <item name="android:colorBackground">@color/blue_grey_300</item>
 
         <item name="colorButtonNormal">@color/blue_grey_200</item>
-
-        <!-- активное состояние (30% прозрачности для фона) -->
-        <item name="colorControlActivated">@android:color/holo_green_light</item>
-
-        <!-- неактивное состояние ползунка -->
-        <item name="colorSwitchThumbNormal">@android:color/holo_orange_dark</item>
-
-        <!-- цвет дорожки для неактивного состояния (30% прозрачности) -->
-        <item name="android:colorForeground">@android:color/darker_gray</item>
-
     </style>
 
     <style name="AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
-
     <style name="PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 
     <style name="Toolbar.TitleText" parent="TextAppearance.Widget.AppCompat.Toolbar.Subtitle">
-        <item name="android:textSize">16sp</item>
+        <item name="android:textSize">17sp</item>
         <item name="android:gravity">start</item>
+    </style>
+
+    <style name="ServerSwitch" parent="Base.Widget.AppCompat.CompoundButton.Switch">
+        <item name="android:colorControlActivated">@android:color/holo_green_light</item>
+        <item name="android:switchTextAppearance">@color/white</item>
+        <item name="android:textSize">12sp</item>
     </style>
 
 </resources>
