--- a/app/src/main/res/layout/dialog_scanning_for_sending.xml
+++ b/app/src/main/res/layout/dialog_scanning_for_sending.xml
@@ -69,6 +69,8 @@
                 </android.support.v7.widget.RecyclerView>
             </LinearLayout>
             <LinearLayout
+                android:layout_marginTop="5dp"
+                android:layout_marginBottom="5dp"
                 android:id="@+id/llSend"
                 android:visibility="gone"
                 android:layout_width="match_parent"
