--- a/app/src/main/res/layout/dialog_scanning_for_sending.xml
+++ b/app/src/main/res/layout/dialog_scanning_for_sending.xml
@@ -69,8 +69,7 @@
                 </android.support.v7.widget.RecyclerView>
             </LinearLayout>
             <LinearLayout
-                android:layout_marginTop="5dp"
-                android:layout_marginBottom="5dp"
+                android:background="@drawable/button_onclick"
                 android:id="@+id/llSend"
                 android:visibility="gone"
                 android:layout_width="match_parent"
@@ -81,6 +80,8 @@
                     android:layout_height="1dp"
                     android:background="@color/white"/>
                 <TextView
+                    android:layout_marginTop="5dp"
+                    android:layout_marginBottom="5dp"
                     android:layout_width="match_parent"
                     android:layout_height="35dp"
                     android:textSize="20sp"
